--- a/package.json
+++ b/package.json
@@ -19,5 +19,5 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "homepage": "https://.github.io/ravindranathtagore/rentmojo"
+  "homepage": "https://ravindranathtagore.github.io/rentmojo"
 }
